--- a/src/scss/partials/_mediaPlayerView.scss
+++ b/src/scss/partials/_mediaPlayerView.scss
@@ -25,13 +25,12 @@
 
     .bottom {
       flex: 0 1 auto;
-      margin-bottom: -100px;
       z-index: 1;
     }
   }
 
   .view__mediaplayer-spacer {
-    flex: 0 0 83px;
+    flex: 0 0 100px;
   }
 
   .view__mediaplayer {
